# freemicro

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_report.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENT-KEYS.md  AUDIT.md  CUSTOMIZING.md  FACTORY-DEFAULTS.md  FEATURE-OPPORTUNITIES.md  LAUNCH.md  LED-STRATEGY.md  MENUBAR.md  PATH-B-CAPTURE.md  PRODUCT-REVIEW.md  PROTOCOL.md  RELEASING.md  SECURITY-MODEL.md  SNIFF-RUNBOOK.md  WEB-UI.md
firmware/qmk-keymap/: README.md  keymap.c
hardware/: capabilities.json
hardware/probes/: codex-micro-303a-8360_2026-07-23.json
hooks/: README.md
presets/: claude-code.input.json  claude-code.keyboard.json
src/freemicro/: __init__.py  __main__.py  agentkeys.py  capture.py  cli.py  compat.py  config.py  daemon.py  default_keymap.json  diagnostics.py  focus.py  hooks_install.py  lighting_owner.py  onboarding.py  padconfig.py  permission_prompt.py  permissions.py  protocol.py  selftest.py  staleness.py  uninstall.py  verify.py
src/freemicro/detector/: __init__.py  probe.py
src/freemicro/device/: __init__.py  codex_micro.py  lighting.py
src/freemicro/input/: __init__.py  actions.py  bridge.py  keys.py  pointer.py  quartz.py
src/freemicro/menubar/: __init__.py  __main__.py  app.py  checks.py  cocoa.py  model.py  status.py
src/freemicro/renderers/: __init__.py  base.py  busylight.py  micro_leds.py  micro_qmk.py  micro_sniffed.py  micro_via.py  screen.py
src/freemicro/state/: __init__.py  engine.py  hooks.py  slots.py
src/freemicro/webui/: __init__.py  api.py  apps.py  configio.py  keycaps.py  layout.py  layouts.py  padlink.py  server.py  starters.py
src/freemicro/webui/static/: app.css  app.js  index.html
tests/: conftest.py  test_actions.py  test_activity_light.py  test_agentkeys.py  test_bridge.py  test_cli.py  test_compat.py  test_daemon.py  test_diagnostics.py  test_e2e.py  test_hooks.py  test_hooks_install.py  test_install_and_detect.py  test_lighting_owner.py  test_menubar.py  test_micro_leds.py  test_onboarding.py  test_one_state_store.py  test_padconfig.py  test_permission_prompt.py  test_permissions.py  test_pointer.py  test_protocol.py  test_renderers.py  test_selftest.py  test_sniff.py  test_staleness.py  test_state_engine.py  test_uninstall.py  test_verify.py  test_webui.py
